added loading screen

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Car Game</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/loading.css">
 </head>
 <body>
+    <div id="loading-toast">
+        <div id="loading-text">Loading...</div>
+        <div class="loading-spinner">
+            <div></div><div></div><div></div><div></div><div></div><div></div><div></div>
+        </div>
+    </div>
     <div id="score-text">Score: 0</div>
     
     <!-- Game Over Overlay -->
